# uritemplate

./: .gitignore  .mailmap  .pre-commit-config.yaml  .tool-versions  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE  LICENSE.APACHE  LICENSE.BSD  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  test_from_uritemplatepy.py  test_uritemplate.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
debian/: changelog  control  copyright  gbp.conf  rules  watch
docs/: .readthedocs.yaml  conf.py  index.rst
docs/source/: conf.py  index.rst  requirements.txt
old/uritemplate.py/: uritemplatepy-setup.py
tests/: test_from_fixtures.py  test_uritemplate.py  test_validator.py
tests/fixtures/: README.md  extended-tests.json  json2xml.xslt
uritemplate/: __init__.py  api.py  exceptions.py  matcher.py  orderedset.py  template.py  validator.py  variable.py
