[metadata]
name = uritemplate
description = Implementation of RFC 6570 URI Templates
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
keywords = rfc 6570 uri template
license = BSD 3-Clause License or Apache License, Version 2.0
license_file = LICENSE
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://uritemplate.readthedocs.org
version = attr: uritemplate.__version__

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[bdist_wheel]
universal = 1

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:

[options.package_data]
; NOTE: This only affects sdists
. = LICENSE, LICENSE.APACHE, LICENSE.BSD, AUTHORS.rst, HISTORY.rst
