[metadata]
name = uritemplate
version = attr: uritemplate.__version__
description = Implementation of RFC 6570 URI Templates
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://uritemplate.readthedocs.org
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = BSD 3-Clause License or Apache License, Version 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = rfc 6570 uri template

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
. = LICENSE, LICENSE.APACHE, LICENSE.BSD, AUTHORS.rst, HISTORY.rst
uritemplate = py.typed

[bdist_wheel]
universal = 1

[mypy]
strict = True
