[metadata]
name = uritemplate
version = attr: uritemplate.__version__
description = Implementation of RFC 6570 URI Templates
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://uritemplate.readthedocs.org
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = BSD 3-Clause OR Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
keywords = rfc 6570 uri template
project_urls =
    Source = https://github.com/python-hyper/uritemplate

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.package_data]
. = LICENSE, LICENSE.APACHE, LICENSE.BSD, AUTHORS.rst, HISTORY.rst
uritemplate = py.typed

[bdist_wheel]
universal = 1

[mypy]
strict = True
